# wechat-gzh

./: .dockerignore  .env.example  .gitignore  Caddyfile  DEPLOYMENT.md  README.md  backup.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 29bfd0d1e9db_add_character_reference_to_accounts.py  4b31cd6708db_add_image_role_to_role_enum.py  54b57cb28235_add_wechat_stats.py  6cc8d75955ec_create_image_post_tables.py  7bcb7ed01a71_create_accounts_table.py  83497ef013ba_add_default_thumb_media_id_to_accounts.py  9f8cce7a7188_create_drafts_and_review_reports_tables.py  a1b2c3d4e5f6_add_cost_cents_to_ai_usage.py  aa119e18bb5f_add_regenerate_count_to_drafts.py  b3a7f1c2e8d9_add_performance_indexes.py  c5223e39a86f_create_tasks_table.py  d04b636b2aab_create_images_table.py  d0f2ca49469f_create_library_items_table.py  fe4a44d5cacf_create_ai_providers_role_bindings_ai_.py
backend/app/: config.py  main.py
backend/app/accounts/: models.py  routes.py  schemas.py  service.py
backend/app/ai_providers/: base.py  models.py  openai_compat.py  registry.py  routes.py  schemas.py  service.py  usage.py  usage_routes.py
backend/app/api/: deps.py  router.py
backend/app/auth/: dependencies.py  jwt_utils.py  routes.py  schemas.py
backend/app/crawler/: fetcher.py  parser.py
backend/app/db/: encryption.py  session.py
backend/app/drafts/: models.py  routes.py  schemas.py  service.py
backend/app/image_assets/: __init__.py  routes.py
backend/data/: sensitive_words.txt
backend/tests/: conftest.py
(+146 files in other folders)
