[project]
name = "wechat-rewriter-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110", "uvicorn[standard]>=0.29",
    "pydantic>=2.6", "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0", "asyncpg>=0.29", "alembic>=1.13",
    "celery[redis]>=5.3", "redis>=5.0",
    "httpx>=0.27", "lxml>=5.1", "readability-lxml>=0.8",
    "openai>=1.14",
    "python-jose[cryptography]>=3.3", "passlib[bcrypt]>=1.7",
    "cryptography>=42.0", "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0", "pytest-asyncio>=0.23",
    "respx>=0.20", "fakeredis>=2.21",
    "testcontainers[postgres,redis]>=4.0",
    "ruff>=0.3", "mypy>=1.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends", "fastapi.Query", "fastapi.Path",
    "fastapi.Body", "fastapi.Header", "fastapi.Form", "fastapi.File",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
